# Elderly_care

./: .gitignore  README.md  index.html  start-frontend.bat  start-system.bat  tailwind.config.ts  test-integration.js  test-integration.mjs
src/: index.css
src/components/: Chatbot.tsx  EventLog.tsx  Footer.tsx  Header.tsx  LiveFeed.tsx  StatusPanel.tsx
src/hooks/: useFallDetection.ts
src/pages/: Index.tsx
src/services/: api.ts  websocket.ts
udaya/: app.py  detection.py  detection_1.py  detection_2.py  detection_3.py  main.py  pyproject.toml  requirements.txt
