[project]
name = "udaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "astunparse==1.6.3",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-socketio==5.5.1",
    "flatbuffers==25.9.23",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.75.1",
    "h11==0.16.0",
    "h5py==3.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "keras==3.11.3",
    "libclang==18.1.1",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.3",
    "namex==0.1.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "opt-einsum==3.4.0",
    "optree==0.17.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "protobuf==6.32.1",
    "pygments==2.19.2",
    "python-engineio==4.12.2",
    "python-socketio==5.13.0",
    "requests==2.32.5",
    "rich==14.1.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "tensorflow-hub==0.16.1",
    "termcolor==3.1.0",
    "tf-keras==2.20.1",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
    "wrapt==1.17.3",
    "wsproto==1.2.0",
]
